--- a/pom.xml
+++ b/pom.xml
@@ -5,24 +5,7 @@
 	<artifactId>Tcc</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
-	 <profiles>
-    <profile>
-        <id>openshift</id>
-        <build>
-            <finalName>projeto</finalName>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>2.4</version>
-                    <configuration>
-                        <outputDirectory>webapps</outputDirectory>
-                        <warName>ROOT</warName>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
-    </profile>
-    </profiles>
+	
 	<repositories>
 	
 		<repository>
@@ -183,6 +166,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
