--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 		<url-pattern>*.jsf</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>/index.jsf</welcome-file>
+		<welcome-file>login.jsf</welcome-file>
 	</welcome-file-list>
 	 <context-param>
         <param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
